# api/handler/review.go
@@ -17,7 +17,7 @@ import (
 // @Param        body body reviews.CreateReviewReq true "Create Review Request"
 // @Success      200 {object} reviews.CreateReviewRes
 // @Failure      400 {object} string
-// @Router       /api/review/create [post]
+// @Router       /review/create [post]
 func (h *Handler) CreateReview(c *gin.Context) {
 	userID, err := getUserID(c)
 	if err != nil {
@@ -51,7 +51,7 @@ func (h *Handler) CreateReview(c *gin.Context) {
 // @Param        page query int true "Page"
 // @Success      200 {object} reviews.GetAllReviewRes
 // @Failure      400 {object} string
-// @Router       /api/review/getallreview [get]
+// @Router       /review/getallreview [get]
 func (h *Handler) GetAllReviews(c *gin.Context) {
 	var req pb.GetAllReviewReq
 	if err := c.BindQuery(&req); err != nil {
@@ -76,7 +76,7 @@ func (h *Handler) GetAllReviews(c *gin.Context) {
 // @Param        id path string true "Review ID"
 // @Success      200 {object} reviews.GetByIdReviewRes
 // @Failure      400 {object} string
-// @Router       /api/review/getbyid/{id} [get]
+// @Router       /review/getbyid/{id} [get]
 func (h *Handler) GetReviewById(c *gin.Context) {
 	var req pb.GetByIdReviewReq
 	req.Id = c.Param("id")
@@ -103,7 +103,7 @@ func (h *Handler) GetReviewById(c *gin.Context) {
 // @Param        body body reviews.CreateReviewReq true "Update Review Request"
 // @Success      200 {object} reviews.CreateReviewRes
 // @Failure      400 {object} string
-// @Router       /api/review/update/{id} [put]
+// @Router       /review/update/{id} [put]
 func (h *Handler) UpdateReview(c *gin.Context) {
 	var req pb.CreateReviewReq
 	req.UserId = c.Param("id") // Assuming the user ID is passed as a path param, adjust as necessary
@@ -129,7 +129,7 @@ func (h *Handler) UpdateReview(c *gin.Context) {
 // @Param        id path string true "Review ID"
 // @Success      200 {object} reviews.DeleteReviewRes
 // @Failure      400 {object} string
-// @Router       /api/review/delete/{id} [delete]
+// @Router       /review/delete/{id} [delete]
 func (h *Handler) DeleteReview(c *gin.Context) {
 	var req pb.DeleteReviewReq
 	req.Id = c.Param("id")
